feat: add Blogger My Channels Page Adaptive

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -661,7 +661,7 @@
     "no_banned": "У вас нет заблокированных каналов",
 
     "offers_count": "Новые",
-    "moderation_time": "В среднем модерация канала занимает 24 часа",
+    "moderation_time": "Модерация канала занимает 24 часа",
     "repeat": "Вы можете повторно отправить  заявку, устранив причину отказа",
     "repeat_date": "Повторная заявка на модерацию будет возможна",
     "ban": "Ваш канал находится в бессрочном бане",
