feat: full Blooggers offers  page Adaptive

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -785,28 +785,31 @@
 
     "offer_status": {
       "active": {
-        "title": "Отправьте пост на проверку",
+        "title": "Отправьте ссылку на пост",
         "placeholder": "Введите ссылку на пост...",
         "invalid_url": "Ссылка недействительна"
       },
       "check": {
-        "title": "Вы отправили пост на проверку",
-        "text": "По истечению времени на проверку, либо после подтверждения заказчиком, средства будут переведены на ваш счет"
+        "title": "Вы отправили пост",
+        "text": "По истечению времени заказа, либо после подтверждения заказчика оплата будет переведена на ваш счёт"
       },
       "wait": {
         "title": "Новая заявка",
         "text": "Вам необходимо принять решение в течение 24 часов, иначе заявка будет автоматически отклонена"
       },
       "cancel": {
-        "title": "Вы отменили заказ",
-        "text": "Напоминаем, что частая отмена заказов может привести к деактивации вашей площадки"
+        "title": "Заказ отклонен",
+        "text": "Напоминаем, что слишком частая отмена заказов может понизить ваш рейтинг"
+      },
+      "complite": {
+        "title": "Заказ выполнен"
       },
       "moderation": {
-        "text": "Рекламный заказ был отклонен в связи с несоответствием с условиями рекламодателя. Ожидайте решение администратора"
+        "text": "Заказ не соответствует требованиям площадки Cubinc. Ожидайте решение администратора"
       },
       "reject": {
-        "title": "Заказ был отклонен администратором",
-        "text": "Вы нарушили обязательства перед рекламодателем"
+        "title": "Заказ аннулирован",
+        "text": "Решение было принято в пользу рекламодателя"
       }
     }
   },
@@ -1359,7 +1362,8 @@
     "my_messages": "Мои сообщения",
     "role": {
       "blogger": "Чат с блоггером",
-      "manager": "Чат с менеджером"
+      "manager": "Чат с менеджером",
+      "advertiser": "Чат с заказчиком"
     },
     "types": {
       "blogger": "От блогеров",
@@ -1596,7 +1600,7 @@
 
   "offer_btn": {
     "see": "К заявкам",
-    "see_post": "Пост",
+    "see_post": "Посмотреть задание",
     "send_link": "Отправить",
     "reject": "Отклонить",
     "accept": "Принять",
@@ -1610,7 +1614,7 @@
     "calendar": "Календарь",
     "reviews": "Отзывы",
     "reason": {
-      "btn": "Причина",
+      "btn": "Посмотреть причину",
       "okey_btn": "Понятно",
       "title": "Причина отклонения/бана"
     },
