--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -883,7 +883,7 @@
       "from": "из"
     },
     "accept": {
-      "title": "Дорогой пользователь,<br/> проверьте данные перед подтверждением",
+      "title": "Проверьте данные перед подтверждением",
       "platform": {
         "title": "Платформа"
       },
@@ -918,7 +918,7 @@
 
     "create": {
       "send": "Ваша заявка отправлена!",
-      "moderation": "Дорогой пользователь, ваша заявка на добавление канала была отправлена на проверку модератору.",
+      "moderation": "Ваша заявка на добавление канала была отправлена на проверку модератору.",
       "answer": {
         "text1": "Ответ придет",
         "span": "в течение 24 часов",
@@ -1247,11 +1247,11 @@
       "default_value": "Введите название..."
     },
     "create": {
-      "title": "Создание рекламного поста",
+      "title": "Создайте рекламный пост",
       "text": "Текст рекламного поста...",
       "generation": "AI Генерация",
       "multi_post": "Уникальный пост",
-      "universal_post": "Универсальный пост",
+      "universal_post": "Один пост для всех",
       "choose_platform": "Выберите платформу",
       "your_posts": "Ваши посты",
       "add_file": "Загрузить файл",
@@ -1260,6 +1260,7 @@
       "post": "Начните заполнять рекламный пост чтобы увидеть результат",
       "template": "Загрузить шаблон",
       "comment_to_post": "Комментарий к техническому заданию: ",
+      "see_post_mobile_btn": "Посмотреть пост",
 
       "post_types": {
         "telegram": { "default": "Универсальный формат" },
@@ -1333,7 +1334,7 @@
     },
 
     "datetime": {
-      "title": "Дата и время"
+      "title": "Укажите дату и время"
     },
 
     "payment": {
@@ -1450,7 +1451,7 @@
       },
       "no_balance": {
         "title": "Пополните баланс",
-        "text": "Дорогой пользователь, к сожалению, на вашем счету недостаточно средств для покупки тарифа.",
+        "text": "К сожалению, на вашем счету недостаточно средств для покупки тарифа.",
         "remainder": "Для покупки тарифа вам не хватает:",
         "button": "Пополнить баланс",
         "help": {
@@ -1460,7 +1461,7 @@
       },
       "success": {
         "title": "Покупка совершена!",
-        "text": "Дорогой пользователь, ваш заказ уже принят на обработку. Следить за состоянием вашего проекта можно в личном кабинете во вкладке ",
+        "text": "Ваш заказ уже принят на обработку. Следить за состоянием вашего проекта можно в личном кабинете во вкладке ",
         "project": "“Проекты с менеджерами”",
         "help": {
           "text1": "Если вам нужна помощь, обратитесь",
