feat: remove MockDATA, fix SelectOption, add Guide accordion, add logic adding in Basket from RecommendCard (CART, ChannelPage), add logic adding/remove from cart in ChannelPage, add ChannelDescription FC in RecommendCard

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1507,7 +1507,8 @@
       "title": "Купить размещение на канале",
       "format": "Формат размещения",
       "price": "Стоимость размещения",
-      "button": "Добавить в корзину"
+      "add": "Добавить в корзину",
+      "remove": "Удалить из корзины"
     },
     "recommend": {
       "title": "Рекомендуемые площадки"
