--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -619,7 +619,7 @@
         "agreed": "На согласовании",
         "completed": "Выполнен"
       },
-      "technical_specificationIcon":"Техническое задание",
+      "technical_specificationIcon": "Техническое задание",
       "channels": "Каналы",
       "views": "Просмотры",
       "tarif": "Тариф",
@@ -630,8 +630,8 @@
       "see_less": "Свернуть",
       "start_btn": "Начать",
       "run_btn": "Запустить",
-      "request_approve":"Кампания была подтверждена",
-      "not_request_approve":"Рекламодатель внес изменения"
+      "request_approve": "Кампания была подтверждена",
+      "not_request_approve": "Рекламодатель внес изменения"
     },
     "subcard": {
       "date": "Дата",
@@ -1290,7 +1290,7 @@
       "text2": "ознакомлен и принимаю их."
     },
 
-    "use_data": "Ваши сохраненные данные:",
+    "use_data": "Сохранённые данные:",
     "empty_data": "У вас нет сохранненых данных",
     "save_data": "Сохранить данные для дальнейшего использования",
     "finally": "Итоговая сумма",
@@ -1408,7 +1408,9 @@
 
     "payment": {
       "title": "Оплата заказа",
-      "pay": "Оплатить"
+      "pay": "Оплатить",
+      "price": "Итоговая сумма:",
+      "description": "Остался последний шаг для запуска эффективной рекламной кампании! Как только вы оплатите заказ, владельцы площадок моментально получат уведомления и начнут размещение вашей рекламы"
     },
 
     "loading": {
