feat: add Profile Page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -948,7 +948,8 @@
         "default_value": "+998 90 999 99 99"
       },
       "language": {
-        "title": "Язык"
+        "title": "Язык",
+                "default_value": "Русский"
       },
       "location": {
         "title": "Локация", 
@@ -982,12 +983,17 @@
       },
       "bot": {
         "title" : "Телеграм бот",
+        "system": "Системные сообщения",
+        "project" :"Уведомления о проектах",
+        "individual": "Индивидуальные предложения и промо рассылки",
         "enable_notifications": "Хотите подключить телеграм бота для уведомлений ?",
         "telegramm": {
           "title": "Введите ваш телеграм аккаунт",
           "default_value": "Sample@gmail.com"
         },
-        "instruction": "Прочитать более подробную инструкцию по настройке телеграм бота"
+        "instruction": "Прочитать более подробную инструкцию по настройке телеграм бота",
+        "change_btn": "Изменить",
+        "cancel_btn": "Отменить"
       },
        "continue_btn": "Продолжить"
     }
