fix: last changes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1415,6 +1415,7 @@
     "payment": {
       "title": "Оплата заказа",
       "pay": "Оплатить",
+      "approve": "На согласование",
       "price": "Итоговая сумма:",
       "description": "Остался последний шаг для запуска эффективной рекламной кампании! Как только вы оплатите заказ, владельцы площадок моментально получат уведомления и начнут размещение вашей рекламы"
     },
