--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -559,7 +559,9 @@
       "remainder": "Остаток",
       "see_more": "Развернуть",
       "see_less": "Свернуть",
-      "request_approve": "Ваша кампания ожидает подтверждения"
+      "request_approve": "Вы подтвердили кампанию",
+      "not_request_approve": "Ваша кампания ожидает подтверждения"
+
     },
     "subcard": {
       "date": "Дата",
@@ -1822,7 +1824,17 @@
         "error": "При отправке ссылки на проверку произошла ошибка"
       }
     },
+    "orders_manager": {
+      "launch_project": {
+        "success": "Вы успешно запустили реклмную кампанию, мы уведомим рекламодателя и оповестим блогеров",
+         "error": "Во время запуска рекламной кампании произошла ошибка"
+      }
+    },
     "orders_advertiser": {
+      "manager_project": {
+        "success": "Рекламная кампания одобрена, мы уведомим менеджера",
+         "error": "Во время одобрения рекламной кампании произошла ошибка"
+      },
       "accept_post": {
         "success": "Пост принят",
         "error": "Во время принятия поста произошла ошибка"
