feat: some bag fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -561,7 +561,6 @@
       "see_less": "Свернуть",
       "request_approve": "Вы подтвердили кампанию",
       "not_request_approve": "Ваша кампания ожидает подтверждения"
-
     },
     "subcard": {
       "date": "Дата",
@@ -1676,7 +1675,8 @@
     "changeChannel": "Заменить канал",
     "changePost": "Заменить пост",
     "seeReport": "Загрузить отчет",
-    "continue": "Продолжить"
+    "continue": "Продолжить",
+    "is_upload_files": "Отправляем файлы"
   },
 
   "offer_btn": {
@@ -1827,13 +1827,13 @@
     "orders_manager": {
       "launch_project": {
         "success": "Вы успешно запустили реклмную кампанию, мы уведомим рекламодателя и оповестим блогеров",
-         "error": "Во время запуска рекламной кампании произошла ошибка"
+        "error": "Во время запуска рекламной кампании произошла ошибка"
       }
     },
     "orders_advertiser": {
       "manager_project": {
         "success": "Рекламная кампания одобрена, мы уведомим менеджера",
-         "error": "Во время одобрения рекламной кампании произошла ошибка"
+        "error": "Во время одобрения рекламной кампании произошла ошибка"
       },
       "accept_post": {
         "success": "Пост принят",
@@ -1855,7 +1855,7 @@
       },
       "payment": {
         "success": "Рекламная кампания успешно оплачена и запущена!",
-        "error": "Ошибка в оплате заказа"
+        "error": "У вас недостаточно средств, нужно пополнить баланс"
       },
       "date": {
         "error": "Ошибка в создании дат для каналов"
