fix: features fixed

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -788,7 +788,9 @@
       "active": {
         "title": "Отправьте ссылку на пост",
         "placeholder": "Введите ссылку на пост...",
-        "invalid_url": "Ссылка недействительна"
+        "invalid_url": "Ссылка недействительна",
+        "send_link_title": "Отправьте ссылку на размещенный рекламный пост",
+        "send_link_subtitle": "Перед отправкой ссылки, пожалуйста, убедитеть что все требования рекламодателя были выполнены в полном объёме"
       },
       "check": {
         "title": "Вы отправили пост",
