--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1174,8 +1174,8 @@
     },
 
     "ai": {
-      "title": "Опишите вашу рекламную компанию",
-      "default_input": "Расскажите о вашем брэнде и о продукте , который вы планируете рекламировать"
+      "title": "Опишите вашу рекламную компанию. Чем подробнее вы опишете свои цели, тем эффективнее будут подобраны целевые аудитории для вас",
+      "default_input": "Расскажите о вашем бренде и о продукте, который вы планируете рекламировать."
     },
 
     "category": {
