fix: change buy tarif FC

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1627,7 +1627,8 @@
         }
       },
       "success": {
-        "title": "Покупка совершена!",
+        "title": "Покупка совершена",
+        "info": "Покупка совершена!",
         "text": "Ваш заказ уже принят на обработку. Следить за состоянием вашего проекта можно в личном кабинете во вкладке ",
         "project": "“Проекты с менеджерами”",
         "help": {
