feat: download all, createOrder submit bag

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1459,7 +1459,7 @@
     "chat_choose": "Выберите чат чтобы начать общение"
   },
 
-  "notifications":{
+  "notifications": {
     "title": "Уведомления",
     "new": "Новых",
     "support": {
@@ -1728,6 +1728,8 @@
     }
   },
 
+  "download_all_files": "Скачать все файлы",
+
   "add_platform_btn": {
     "check": "Проверить",
     "checked": "Проверено",
@@ -1939,6 +1941,9 @@
       }
     },
     "create_order": {
+      "top": {
+        "title_empty_error": "Укажите название рекламной кампании"
+      },
       "post": {
         "success": "Пост успешно создан",
         "error": "Ошибка в создании поста"
@@ -1948,7 +1953,8 @@
         "error": "У вас недостаточно средств, нужно пополнить баланс"
       },
       "date": {
-        "error": "Ошибка в создании дат для каналов"
+        "error": "Ошибка в создании дат для каналов",
+        "add_dates_error": "Нужно заполнить даты в заказах"
       },
       "create_order": {
         "error": "Произошла ошибка"
