feat: createOrder upload files logic

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1174,7 +1174,7 @@
     },
 
     "ai": {
-      "title": "Опишите вашу рекламную компанию. Чем подробнее вы опишете свои цели, тем эффективнее будут подобраны целевые аудитории для вас",
+      "title": "Опишите вашу рекламную кампанию. Чем подробнее вы опишете свои цели, тем эффективнее будут подобраны целевые аудитории для вас",
       "default_input": "Расскажите о вашем бренде и о продукте, который вы планируете рекламировать."
     },
 
@@ -1729,6 +1729,7 @@
   },
 
   "download_all_files": "Скачать все файлы",
+  "copy_post_text": "Скопировать текст поста",
 
   "add_platform_btn": {
     "check": "Проверить",
@@ -1959,6 +1960,9 @@
       "create_order": {
         "error": "Произошла ошибка"
       }
+    },
+    "post": {
+      "copy_text": "Текст успешно скопирован"
     }
   },
   "url_link": "Введите URL-адрес...",
