feat: add ComplainInfo Page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2066,11 +2066,63 @@
         "date": "Дата",
         "priority": "Приоритет",
 
-        "status": {
+        "priority_status": {
           "low": "Низкий",
           "medium": "Средний",
           "high": "Высокий"
         }
+      }
+    },
+
+    "complaintInfo": {
+      "card": {
+        "title": "Жалоба",
+
+        "description": {
+          "title": "Описание",
+          "sender": "Отправитель",
+          "moderator": "Модератор",
+          "date": "Дата создания",
+          "theme": "Тема",
+          "status": "Статус",
+          "priority": "Приоритет",
+          "comment": "Комментарий"
+        },
+
+        "details": {
+          "title": "Детали",
+          "channel": "Рекламная площадка",
+          "owner": "Владелец площадки",
+          "id": "ID заказа",
+          "date": "Дата размещения",
+          "time": "Время размещения",
+          "platform": "Платформа",
+          "format": "Формат размещения",
+          "amount": "Сумма",
+          "link_blogger": "Ссылка на пост (владелец площадки)",
+          "link_advertiser": "Ссылка на пост (Рекламодатель)",
+
+          "buttons": {
+            "seePost": "Посмотреть пост"
+          }
+        },
+
+        "decision": {
+          "title": "Примите решение"
+        },
+
+        "buttons": {
+          "decision": "Принять решение",
+          "reject": "Отклонить",
+          "accept": "Принять"
+        },
+
+        "status": {
+          "wait": "Ожидает",
+          "active": "Активный",
+          "complite": "Завершен"
+        }
+
       }
     },
 
