feat: add components in Admin Panel

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1978,6 +1978,14 @@
       "reviews": "Отзывы"
     },
     "channels": {
+      "bar": {
+        "id": "Название&ID",
+        "owner": "Владелец",
+        "platform": "Платформа",
+        "date": "Дата",
+        "status": "Статус"
+      },
+
       "card": {
         "rate": "Рейтинг",
         "complete": "Выполненных",
@@ -2012,14 +2020,57 @@
       }
     },
     "users": {
+      "bar": {
+        "id": "ID транзакции",
+        "name": "Имя пользователя",
+        "email": "Почта",
+        "date": "Дата создания",
+        "status": "Статус"
+      },
+
       "card": {
         "status": {
           "active": "Активный",
           "banned": "Заблокированный"
+        },
+
+        "menu": {
+
+          "details": "Подробнее",
+          "send_message": "Написать сообщение",
+          "edit": "Редактировать",
+          "unblock": "Разблокировать",
+
+          "editing": {
+            "title": "Редактирование профиля",
+            "username": "Имя пользователя",
+            "email": "Почта",
+            "phone": "Телефон",
+            "language": "Язык",
+            "location": "Локация",
+            "password": "Пароль",
+            "telegram": "Телеграм-аккаунт",
+
+            "buttons": {
+              "cancel": "Отменить",
+              "update": "Обновить"
+          }
+          }
         }
       }
     },
     "transactions": {
+      "bar": {
+        "id": "ID транзакции",
+        "sender": "Отправитель",
+        "recipient": "Получатель",
+        "date": "Дата создания",
+        "method": "Метод оплаты",
+        "purpose": "Назначение",
+        "amount": "Сумма",
+        "status": "Статус"
+      },
+
       "card": {
         "details": {
           "title": "Системный статус",
@@ -2059,6 +2110,20 @@
     },
 
     "complaints": {
+      "types": {
+        "wait":"Ожидают",
+        "active": "В работе",
+        "complite":"Завершены"
+      },
+
+      "bar": {
+        "id": "ID запроса",
+        "sender": "Отправитель",
+        "theme": "Тема",
+        "date": "Дата",
+        "priority": "Приоритет"
+      },
+
       "card": {
         "id": "ID запроса",
         "theme": "Тема",
@@ -2127,6 +2192,20 @@
     },
 
     "reviews": {
+      "types": {
+        "wait":"Ожиданиют",
+        "accept":"Принятые"
+      },
+
+      "bar": {
+        "id": "ID запроса",
+        "platform": "Площадка",
+        "sender": "Отпарвитель",
+        "moderator": "Модератор",
+        "date": "Дата",
+        "closed_date": "Дата закрытия"
+      },
+
       "card": {
         "buttons": {
           "accept": "Принять",
