feat: add Admin Dropdown Menu and Admin Channel Card

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1968,6 +1968,16 @@
   "url_link": "Введите URL-адрес...",
 
   "admin_panel": {
+    "burger_menu":{
+      "home": "Главная",
+      "channels": "Каналы",
+      "users": "Пользователи",
+      "transactions": "Tранзакции",
+      "moderation": "Модерация",
+      "complaints": "Жалобы",
+      "reviews": "Отзывы"
+    },
+
     "pages": {
       "home": "Главная",
       "channels": "Каналы",
