--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,56 @@
 {
+  "footer": {
+    "results": {
+      "users": "Всего пользователей",
+      "channels": "Всего площадок",
+      "online": "Сейчас онлайн"
+    },
+    "nav": {
+      "services": {
+        "name": "Сервисы",
+        "links": {
+          "catalog": "Каталог площадок",
+          "add_channel": "Добавить канал",
+          "turnkey": "Готовые решения под ключ",
+          "calculate": "Калькулятор доходности",
+          "tg_bot": "Телеграм-бот"
+        }
+      },
+      "about": {
+        "name": "О компании",
+        "links": {
+          "reviews": "Отзывы",
+          "public_offer": "Пользовательское соглашение",
+          "service_rules": "Правила сервиса"
+        }
+      },
+      "cooperation": {
+        "name": "Сотрудничество",
+        "links": {
+          "vacancies": "Вакансии",
+          "partner_programm": "Партнерская программа"
+        }
+      },
+      "community": {
+        "name": "Сообщество",
+        "links": {
+          "faq": "F.A.Q.",
+          "news": "Новости",
+          "blog": "Блог"
+        }
+      }
+    },
+    "contacts": {
+      "tech_contact": "+99899-111-11-11",
+      "tech_title": "По техническим вопросам",
+      "cooperation_contact": "+99891-999-99-99",
+      "cooperation_title": "По вопросам сотрудничества",
+      "email": "Info@blogix.uz",
+      "email_title": "Техническая поддержка круглосуточно",
+      "address": "г. Ташкент, 123123, ул. Никуево, д. 123, бизнес-центр “Конгресс” , 1 этаж"
+    },
+    "all_rights": "Cubeinc Development © All rights reserved"
+  },
   "registration": "Регистрация",
   "login": "Войти",
   "logout": "Выход",
@@ -1969,7 +2021,7 @@
   "url_link": "Введите URL-адрес...",
 
   "admin_panel": {
-    "burger_menu":{
+    "burger_menu": {
       "home": "Главная",
       "channels": "Каналы",
       "users": "Пользователи",
@@ -2046,7 +2098,6 @@
         },
 
         "menu": {
-
           "details": "Подробнее",
           "send_message": "Написать сообщение",
           "edit": "Редактировать",
@@ -2065,7 +2116,7 @@
             "buttons": {
               "cancel": "Отменить",
               "update": "Обновить"
-          }
+            }
           }
         }
       }
@@ -2120,9 +2171,9 @@
 
     "complaints": {
       "types": {
-        "wait":"Ожидают",
+        "wait": "Ожидают",
         "active": "В работе",
-        "complite":"Завершены"
+        "complite": "Завершены"
       },
 
       "bar": {
@@ -2196,14 +2247,13 @@
           "active": "Активный",
           "complite": "Завершен"
         }
-
       }
     },
 
     "reviews": {
       "types": {
-        "wait":"Ожиданиют",
-        "accept":"Принятые"
+        "wait": "Ожиданиют",
+        "accept": "Принятые"
       },
 
       "bar": {
