feat: change password logic, footer mobile, truncate

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -94,7 +94,7 @@
     "less_characters": "Максимум 15 символов",
     "passwords_dont_match": "Пароли не совпадают",
     "set_new_password": "Введите новый пароль",
-    "previous_reseted": "Предыдущий пароль был очищен. Введите новый пароль",
+    "previous_reseted": "Предыдущий пароль будет заменён на новый",
     "password": "Пароль",
     "email": "Почта",
     "confirm_password": "Подтверждение пароля",
@@ -2016,6 +2016,12 @@
     },
     "post": {
       "copy_text": "Текст успешно скопирован"
+    },
+
+    "forgot_password": {
+      "password_changed": "Пароль успешно изменён!",
+      "wrong_code": "Неверный код, попробуйте сначала...",
+      "other_error": "Упс! Что-то пошло не так..."
     }
   },
   "url_link": "Введите URL-адрес...",
