email code logic

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -99,10 +99,6 @@
     "email": "Почта",
     "confirm_password": "Подтверждение пароля",
     "set_password": "Сохранить пароль",
-    "auth_error": "Ошибка авторизации",
-    "auth_success": "Успешная авторизация",
-    "accound_exist": "Такой аккаунт уже существует",
-    "registration_error": "Ошибка регистрации",
     "subscribtion": "Получать уведомления от платформы",
     "by_clicking_sign_up": "Кликая на кнопку регистрации вы подтверждаете что ознакомились со следующим:",
     "terms": "Правила сервиса",
@@ -2017,11 +2013,24 @@
     "post": {
       "copy_text": "Текст успешно скопирован"
     },
-
+    "authorization": {
+      "auth_error": "Ошибка авторизации",
+      "auth_success": "Успешная авторизация",
+      "account_exist": "Такой аккаунт уже существует",
+      "registration_error": "Ошибка регистрации"
+    },
     "forgot_password": {
       "password_changed": "Пароль успешно изменён!",
       "wrong_code": "Неверный код, попробуйте сначала...",
       "other_error": "Упс! Что-то пошло не так..."
+    },
+    "registration": {
+      "email_verify": {
+        "email_exists": "Данная почта уже зарегистрирована, попробуйте авторизоваться либо введите другую почту",
+        "other_error": "Упс! Что-то пошло не так...",
+        "wrong_code": "Неверный код, попробуйте сначала...",
+        "resend_code_success": "Новый код повторно отправлен на почту:"
+      }
     }
   },
   "url_link": "Введите URL-адрес...",
