fix: little fix

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -589,7 +589,7 @@
     },
     "status_filter": {
       "active": "Активные",
-      "complite": "Выполненные",
+      "complete": "Выполненные",
       "develop": "В разработке",
       "agreed": "На согласовании"
     },
@@ -658,7 +658,7 @@
     "no_project": "На данный момент у вас нет проектов",
     "status_filter": {
       "active": "Активные",
-      "complite": "Выполненные",
+      "complete": "Выполненные",
       "new": "Новые заказы",
       "agreed": "На согласовании"
     },
@@ -806,10 +806,10 @@
     "status_filter": {
       "active": "Активные",
       "waiting": "Ожидают принятия",
-      "complite": "Выполненные",
+      "complete": "Выполненные",
       "reject": "Отклоненные",
       "moderation": "На модерации",
-      "uncomplite": "Невыполненные"
+      "uncomplete": "Невыполненные"
     },
 
     "card": {
@@ -817,7 +817,7 @@
         "active": "В работе",
         "check": "На проверке",
         "wait": "В ожидании",
-        "complite": "Выполнен",
+        "complete": "Выполнен",
         "cancel": "Отменен",
         "moderation": "На модерации",
         "reject": "Отклонен"
@@ -854,7 +854,7 @@
         "title": "Заказ отклонен",
         "text": "Напоминаем, что слишком частая отмена заказов может понизить ваш рейтинг"
       },
-      "complite": {
+      "complete": {
         "title": "Заказ выполнен"
       },
       "moderation": {
@@ -2178,7 +2178,7 @@
         },
 
         "status": {
-          "complite": "Выполнена",
+          "complete": "Выполнена",
           "reject": "Отклонена",
           "pending": "В ожидании"
         }
@@ -2189,7 +2189,7 @@
       "types": {
         "wait": "Ожидают",
         "active": "В работе",
-        "complite": "Завершены"
+        "complete": "Завершены"
       },
 
       "bar": {
@@ -2261,7 +2261,7 @@
         "status": {
           "wait": "Ожидает",
           "active": "Активный",
-          "complite": "Завершен"
+          "complete": "Завершен"
         }
       }
     },
